--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,9 +1,9 @@
-<div>
-    <button (click)="onSelectUser()">
+<app-card>
+    <button [class.active]="selected" (click)="onSelectUser()">
         <img 
-            [src]="imagePath()"
-            [alt]="selectedUser().name" 
+            [src]="imagePath"
+            [alt]="user.name" 
         />
-        {{ selectedUser().name }}
+        <span>{{ user.name }}</span>
     </button>
-</div>
+</app-card>
